переделал watch, добавил default

--- a/start-project/package.json
+++ b/start-project/package.json
@@ -20,6 +20,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
     "gulp-uglifyjs": "^0.6.2",
-    "imagemin-pngquant": "^5.0.0"
+    "gulp-watch": "^4.3.11",
+    "imagemin-pngquant": "^5.0.0",
+    "run-sequence": "^1.2.2"
   }
 }
